--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
@@ -14,10 +15,15 @@
     "react": "^17.0.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.12",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-select": "^4.2.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
